[gd_scene load_steps=5 format=3 uid="uid://dd2svkxjbayjh"]

[ext_resource type="Script" path="res://characters/enemy.gd" id="1_m8tqs"]
[ext_resource type="Texture2D" uid="uid://ddpepwhj03vtu" path="res://assets/sprites/Pinguim.png" id="2_uab5i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_45rxx"]
radius = 154.029

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nk6xo"]
size = Vector2(44, 41)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.7, 0.7)
collision_layer = 4
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_m8tqs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_uab5i")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_45rxx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_nk6xo")
debug_color = Color(0.943872, 7.5084e-06, 0.599656, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
